Fix overlap of annotations switch with search button on small screens

--- a/src/components/NavbarItems/ArmAnnotations.module.scss
+++ b/src/components/NavbarItems/ArmAnnotations.module.scss
@@ -15,6 +15,11 @@
 }
 
 .control {
+  @media (max-width: 996px) {
+    // This requires div:has(.DocSearch-Button)'s position /= "absolute" in custom.scss
+    margin-right: var(--ifm-navbar-item-padding-horizontal);
+  }
+
   input ~ * {
     cursor: pointer;
   }
