--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -106,6 +106,15 @@ $ada-lang-primary-color: #228be6; // #2e8555;
   --docsearch-text-color: var(--ifm-navbar-link-color);
 }
 
+@media (max-width: 996px) {
+  // TODO This is a bit error-prone and it would be better to have something like :has()
+  // (currently requires layout.css.has-selector.enabled to be set to true in Firefox)
+  // div:has(.DocSearch-Button) {
+  div[class*="Navbar-Search-styles-module"] {
+    position: inherit !important;
+  }
+}
+
 [data-theme="light"] .DocSearch-Button {
   --docsearch-searchbox-background: var(--ifm-color-emphasis-700);
   --docsearch-searchbox-focus-background: var(--ifm-color-emphasis-600);
